[gd_scene load_steps=9 format=3 uid="uid://cybydn52j3wnw"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_cgek4"]
[ext_resource type="Script" path="res://scenes/player/platformer_behavior.gd" id="1_vpgob"]
[ext_resource type="Texture2D" uid="uid://dg5e3xs2b5b43" path="res://assets/textures/player/player_spritesheet.png" id="2_rqrr0"]
[ext_resource type="Script" path="res://scenes/player/gravity_manager.gd" id="3_qkcit"]
[ext_resource type="Script" path="res://assets/resources/_types/gravity_area_data.gd" id="4_qj1g1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kst6t"]
size = Vector2(8, 16)

[sub_resource type="Resource" id="Resource_5e4v3"]
script = ExtResource("4_qj1g1")
up_direction = Vector2(0, 1)
gravity_scale = 1.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yow76"]
radius = 16.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_cgek4")

[node name="MainSprite" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_rqrr0")
hframes = 16

[node name="WorldCollider" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_kst6t")

[node name="PlatformerBehavior" type="Node" parent="." node_paths=PackedStringArray("bonk_left_raycast", "bonk_center_raycast", "bonk_right_raycast", "gravity_manager")]
script = ExtResource("1_vpgob")
bonk_left_raycast = NodePath("../Raycasts/LeftRaycast")
bonk_center_raycast = NodePath("../Raycasts/CenterRaycast")
bonk_right_raycast = NodePath("../Raycasts/RightRaycast")
bonk_velocity = 40.0
gravity_manager = NodePath("../GravityManager")

[node name="GravityManager" type="Node" parent="."]
script = ExtResource("3_qkcit")
gravity_influences = Array[ExtResource("4_qj1g1")]([SubResource("Resource_5e4v3")])

[node name="Raycasts" type="Node2D" parent="."]

[node name="CenterRaycast" type="RayCast2D" parent="Raycasts"]
target_position = Vector2(0, -14)

[node name="RightRaycast" type="RayCast2D" parent="Raycasts"]
position = Vector2(4, 0)
target_position = Vector2(0, -48)

[node name="LeftRaycast" type="RayCast2D" parent="Raycasts"]
position = Vector2(-4, 0)
target_position = Vector2(0, -48)

[node name="HazardHitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="HazardCollider" type="CollisionShape2D" parent="HazardHitbox"]
shape = SubResource("CircleShape2D_yow76")

[connection signal="body_entered" from="HazardHitbox" to="." method="_on_hazard_hitbox_body_entered"]
